# super-potato

./: CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  create_tables.sql
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  med_client
client/include/: client_auth.hpp  client_doctor.hpp  client_junior_admin.hpp  client_patient.hpp  client_senior_admin.hpp  common_for_all.hpp  get_by_phone.hpp
client/src/: client_auth.cpp  client_doctor.cpp  client_junior_admin.cpp  client_patient.cpp  client_senior_admin.cpp  common_for_all.cpp  get_by_phone.cpp  main.cpp
include/: auth.hpp  common.hpp  handlers.hpp  input_utils.hpp  nandler_request.hpp  password_utils.hpp  patient_menu.hpp  server.hpp  session.hpp  super_admin_menu.hpp  system_init.hpp
include/handlers/: add_doctor.hpp  add_junior_admin.hpp  add_record_slot.hpp  display_doctors.hpp  display_users.hpp  doctor_hospital_managment.hpp  junior_admin_schedule.hpp  login.hpp  patient_schedule.hpp  registration.hpp
server/: CMakeLists.txt
server/include/: database.hpp  handler_request.hpp  session.hpp
server/include/handlers/: add_hospital.hpp  display_hospitals.hpp  doctor_schedule.hpp
server/src/: main.cpp
server/src/handlers/: add_hospital.cpp  display_users.cpp  doctor_schedule.cpp  registration.cpp
src/: auth.cpp  common.cpp  database.cpp  handler_request.cpp  handlers.cpp  input_utils.cpp  main.cpp  password_utils.cpp  patient_menu.cpp  server.cpp  session.cpp  super_admin_menu.cpp  system_init.cpp
src/handlers/: add_doctor.cpp  add_junior_admin.cpp  add_record_slot.cpp  display_doctors.cpp  display_hospitals.cpp  doctor_hospital_managment.cpp  junior_admin_schedule.cpp  login.cpp  patient_schedule.cpp
